Fix social media margin & spacing!

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@
     scroll-behavior: smooth;
 }
 
-header{
+header {
     background-color: whitesmoke;
     width: 100%;
     position: fixed;
@@ -19,7 +19,7 @@ header{
     padding: 10px 200px;
 }
 
-.logo{
+.logo {
     text-decoration: none;
     color: tomato;
     text-transform: capitalize;
@@ -39,7 +39,7 @@ header{
     color: #0088ff;
 }
 
-section{
+section {
     padding: 100px 200px;
 }
 
@@ -57,7 +57,7 @@ section{
 .main h2{
     color: white;
     font-size: 1.4em;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .main h2 span{
@@ -65,7 +65,7 @@ section{
     margin-top: 10px;
     color: #0088ff;
     font-size: 3em;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .main h3{
@@ -100,7 +100,8 @@ section{
     color: #ffffff;
     font-size: 2em;
     padding-right: 20px;
-    margin-left: 10px;
+    margin-left: 14px;
+    letter-spacing: -15px;
 }
 
 .title {
